repl::checkForCappedOplog will segfault if the local database doesn't exist

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.13, 3.3.14
    • Affects Version/s: 3.3.8
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 2016-09-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It dereferences the db without checking for null. This is especially a problem because it is called in the loop repairDatabasesAndCheckVersion for every database. It should be either moved out of the loop or only done when dbName == "local".

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Mathias Stearn
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: