SERVER-25519 repl::checkForCappedOplog accepts db pointer to local database