src/mongo/db/repl/oplog.h
@@ -146,7 +146,7 @@ void signalOplogWaiters();
 /**
  * Check that the oplog is capped, and abort the process if it is not.
  */
-void checkForCappedOplog(OperationContext* txn);
+void checkForCappedOplog(OperationContext* txn, Database* db);
 
 }  // namespace repl
 }  // namespace mongo
